# kirigami

./: CMakeLists.txt
src/: CMakeLists.txt  inputmethod.cpp  inputmethod.h  kirigamiplugin.cpp
src/controls/: Action.qml  ActionTextField.qml  ActionToolBar.qml  ApplicationItem.qml  ApplicationWindow.qml  Avatar.qml  BasicListItem.qml  Card.qml  CardsGridView.qml  CardsLayout.qml  Dialog.qml  FormLayout.qml  MenuDialog.qml  NavigationTabButton.qml  PromptDialog.qml  ScrollableDialog.qml
src/controls/templates/private/: ScrollView.qml
src/libkirigami/: CMakeLists.txt  virtualkeyboardwatcher.cpp  virtualkeyboardwatcher.h
templates/kirigami/android/: AndroidManifest.xml
